@@ -1,10 +1,16 @@
 Version (SVN)
 -------------------------------
 
+XML:   Resolved issue CASTOR-1764 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Fixed problem with incorrectly generated qualified class name for classes in 
+       type hierarchies.
+       Details: http://jira.codehaus.org/browse/CASTOR-1764
+       (Werner - 20061225)
+
 XML:   Resolved issue CASTOR-1760 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        <xsd:int> mappes onto Java type 'int/java.lang.Integer' again.
        Details: http://jira.codehaus.org/browse/CASTOR-1760
-       (Werner - 20061226)
+       (Werner - 20061225)
 
 XML:   Resolved issue CASTOR-1761 using contribution from Edward Kuns [edward.kuns@aspect.com]
        Java 5 breaks BigDecimal validation
